apps/jellyfin/deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: jellyfin
  namespace: media
spec:
  replicas: 1
  selector:
    matchLabels:
      app: jellyfin
  strategy:
    type: Recreate
  template:
    metadata:
      labels:
        app: jellyfin
    spec:
      automountServiceAccountToken: false
      securityContext:
        seccompProfile:
          type: RuntimeDefault
      containers:
        - name: jellyfin
          image: docker.io/jellyfin/jellyfin:10.11.11
          resources:
            requests:
              memory: 1024Mi
              cpu: 300m
            limits:
              memory: 2048Mi
              cpu: 1000m
          volumeMounts:
            - name: config
              mountPath: /config
            - name: media
              mountPath: /media
          ports:
            - containerPort: 8096
      volumes:
        - name: config
          persistentVolumeClaim:
            claimName: jellyfin-config
        - name: media
          persistentVolumeClaim:
            claimName: jellyfin-media
