apps/jellyfin/ingress.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: jellyfin
  namespace: jellyfin
  annotations:
    tailscale.com/tags: tag:k8s
    tailscale.com/https: "true"
spec:
  ingressClassName: tailscale
  tls:
    - hosts:
        - jellyfin
  rules:
    - host: jellyfin
      http:
        paths:
          - path: /
            pathType: Prefix
            backend:
              service:
                name: jellyfin
                port:
                  number: 80
